--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Book Stats</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Current Books</string>
+    <string name="title_finished">Finished Books</string>
+    <string name="title_statistics">Stats</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
